align cd correctly

--- a/styles/style.css
+++ b/styles/style.css
@@ -54,7 +54,7 @@ html body {
     background-size: cover;
 }
 .cd {
-    margin-top: 24px;
+    margin-top: 38px;
 }
 
 .moveRight {
